<resources>
    <string name="app_name" translatable="false">Dicoding Events Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_events">Search events</string>
    <string name="language_settings">Language Settings</string>
    <string name="hosted_by">Hosted by:\n %1$s</string>
    <string name="no_event_available_please_wait">No Event Available. Please wait.</string>
    <string name="image_error_no_data_events_available">Image error no data events available</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="location">Location</string>
    <string name="number_participants">%3$s Participants</string>
    <string name="description">Description</string>
    <string name="register">Register</string>
    <string name="loading_please_wait">Loading....Please wait</string>
    <string name="date_time">Date/Time</string>
    <string name="remaining_quota">Remaining quota</string>
    <string name="live_at_youtube_dicoding_indonesia" translatable="false">LIVE at YouTube\n Dicoding Indonesia \n%1$s</string>
    <string name="no_data_upcoming_event_please_try_again_later">No data upcoming event. Please try again later.</string>
    <string name="error_load_data_event_past_please_try_again_later">Error load data event past. Please try again later.</string>
    <string name="image_carousel_upcoming_event">Image Carousel Upcoming Event</string>
    <string name="finished_events">Finished Events</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="icon_dicoding">Icon Dicoding</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_event_here">Search event here</string>
    <string name="settings">Settings</string>
    <string name="button_back_setting">button back setting</string>
    <string name="setting_change_language">Change Language</string>
    <string name="setting_icon_arrow">Icon Arrow Setting</string>
    <string name="participants">Participants</string>
    <string name="event_archived">Event Archived</string>
    <string name="next_events">Next Events</string>
    <string name="scheduled">Scheduled</string>
    <string name="history">History</string>
    <string name="main">Main</string>
    <string name="event_data_is_experiencing_problems_please_try_again_later">Event data is experiencing problems. Please try again later.</string>
    <string name="the_event_you_are_looking_for_was_not_found_n_try_searching_with_other_keywords">The event you are looking for was not found. \n Try searching with other keywords.</string>
    <string name="image_backdrop_event_path">image backdrop event path</string>
    <string name="image_no_internet_connection">Image no internet connection</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="please_check_your_wifi_connection_or_data_package_quota">Please check your Wifi connection or data package quota.</string>
    <string name="reload_page">Reload page</string>
    <string name="image_poster_of_event">image poster of event</string>
    <string name="no_data_event_favorite_available_yet">No data Event Favorite available yet</string>
    <string name="button_favorite_event">button favorite event</string>
    <string name="favorite">Favorite</string>
    <string name="image_no_data_event_favorite">Image no data event favorite</string>
    <string name="event_saved">Event saved</string>
    <string name="removed_from_favorites">Removed from favorites</string>
</resources>