<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img_no_internet_connection"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_no_internet_connection"
        android:src="@drawable/no_internet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/txt_lbl_no_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/home_tv_tittle"
        android:text="@string/no_internet_connection"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/img_no_internet_connection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_lbl_suggest_check_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/home_tv_tittle"
        android:text="@string/please_check_your_wifi_connection_or_data_package_quota"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/txt_lbl_no_internet_connection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_reload_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reload_page"
        app:layout_constraintTop_toBottomOf="@id/txt_lbl_suggest_check_connection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>