<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".domain.detail.DetailEventsActivity"
    tools:showIn="@layout/activity_detail_events">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="12dp">

            <ImageView
                android:id="@+id/img_logo_event"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/place_holder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_title_event_detail" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_kind_of_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_tv_item_white_mini"
                android:textSize="12sp"
                android:maxLines="1"
                android:gravity="center_vertical"
                android:textColor="@color/darkGray"
                android:textStyle="bold"
                android:ellipsize="end"
                android:drawablePadding="8dp"
                app:flow_horizontalBias="0.0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Seminar"/>

            <TextView
                android:id="@+id/txt_title_event_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:maxLines="3"
                tools:text="Android Career Kickstart: Actionable Advice for New Graduates to Land Developer Roles Rapidly"
                app:layout_constraintTop_toBottomOf="@id/txt_kind_of_event"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/txt_hosted_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:padding="4dp"
                app:layout_constraintTop_toBottomOf="@id/txt_title_event_detail"
                app:layout_constraintStart_toEndOf="@id/img_logo_event"
                android:text="@string/hosted_by"
                android:maxLines="2"
                />

            <TextView
                android:id="@+id/txt_lbl_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/txt_hosted_by"
                app:layout_constraintStart_toStartOf="@id/txt_hosted_by"
                android:text="@string/date_time"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txt_lbl_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/txt_lbl_date_time"
                app:layout_constraintStart_toStartOf="@id/txt_lbl_date_time"
                android:text="@string/start"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/txt_lbl_start_time"
                app:layout_constraintStart_toEndOf="@id/img_logo_event"
                tools:text="27 Jul 2024 13:00"
                />
            <TextView
                android:id="@+id/txt_lbl_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_start_time"
                app:layout_constraintStart_toStartOf="@id/txt_lbl_start_time"
                android:text="@string/end"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/txt_lbl_end_time"
                app:layout_constraintStart_toEndOf="@id/img_logo_event"
                tools:text="29 Jul 2024 13:00"
                />

            <TextView
                android:id="@+id/txt_lbl_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/location"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_end_time"
                app:layout_constraintStart_toStartOf="@id/txt_lbl_end_time"/>

            <ImageView
                android:id="@+id/img_pin_location"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_location"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/txt_lbl_location"
                app:layout_constraintStart_toEndOf="@id/img_logo_event"
                app:tint="?attr/iconTint"/>

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                app:layout_constraintTop_toBottomOf="@id/txt_lbl_location"
                app:layout_constraintStart_toEndOf="@id/img_pin_location"
                tools:text="Youtube: ioh.co.id/IDCampLIVE-9Jan Online "/>

            <TextView
                android:id="@+id/txt_lbl_remaining_quota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/remaining_quota"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/img_logo_event"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_remaining_quota_participants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_participants"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="@+id/txt_lbl_remaining_quota"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_lbl_remaining_quota" />


            <TextView
                android:id="@+id/txt_lbl_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:text="@string/description"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_logo_event"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/img_logo_event"
                app:layout_constraintTop_toBottomOf="@id/img_logo_event" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@string/description"
                app:layout_constraintTop_toBottomOf="@id/txt_lbl_description"
                app:layout_constraintStart_toStartOf="parent"/>

            <View
                android:id="@+id/line_border_description_summary"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:background="@color/line_dark_background"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/tv_summary_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="Summary"
                app:layout_constraintTop_toBottomOf="@id/line_border_description_summary"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/btn_register_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/register"
                app:layout_constraintTop_toBottomOf="@id/tv_summary_event"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.core.widget.NestedScrollView>