<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/txt_lbl_Upcoming_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_events"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/img_data_empty_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/image_error_no_data_events_available"
        android:src="@drawable/ic_calendar_event_error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_lbl_Upcoming_event"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txt_no_data_event_upcoming_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:text="@string/no_data_upcoming_event_please_try_again_later"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/img_data_empty_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"/>


    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerFrameLayoutCarrouselEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/txt_lbl_Upcoming_event"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <include layout="@layout/shimmer_item_carrousel" />

            <include layout="@layout/shimmer_item_carrousel" />

            <include layout="@layout/shimmer_item_carrousel" />
        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_events_future"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/txt_lbl_Upcoming_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/item_event_carrousel"
        tools:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>